# MicroAPI

./: README.md  pyproject.toml
examples/: client.py  main.py  middlewares.py  schemas.py  server.py
examples/lib/v1/: __init__.py  types.py  users.py
microapi/: __init__.py  core.py  generator.py  hot_reload.py  logging.py  middleware.py  scheme.py  server.py  service.py  types.py
microapi/client/: __init__.py  scheme.py
microapi/transport/: __init__.py  base.py  grpc.py
microapi/utils/: __init__.py  validators.py
