[tool.poetry]
name = "microapi"
version = "0.1.0"
description = ""
authors = ["BiqRed <biqred.shine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.4"
aiohttp = "^3.11.18"
h2 = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
